--- a/Student_Project/studentProject/Template/teacherList.html
+++ b/Student_Project/studentProject/Template/teacherList.html
@@ -15,6 +15,7 @@
         <th style="padding: 14px; border: 1px solid #ddd; text-align: left;">Email</th>
         <th style="padding: 14px; border: 1px solid #ddd; text-align: left;">Phone</th>
         <th style="padding: 14px; border: 1px solid #ddd; text-align: left;">Department</th>
+        <th style="padding: 14px; border: 1px solid #ddd; text-align: center;">Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -25,6 +26,11 @@
         <td style="padding: 12px; border: 1px solid #ddd;">{{ teacher.Teacher_email }}</td>
         <td style="padding: 12px; border: 1px solid #ddd;">{{ teacher.Teacher_phone }}</td>
         <td style="padding: 12px; border: 1px solid #ddd;">{{ teacher.Teacher_department }}</td>
+        <td style="padding: 12px; border: 1px solid #ddd; text-align: center;">
+          <a href="" style="padding: 6px 10px; background-color: #1abc9c; color: white; text-decoration: none; border-radius: 4px; margin-right: 6px;">View</a>
+          <a href="{% url 'editTeacher' teacher.id %}" style="padding: 6px 10px; background-color: #3498db; color: white; text-decoration: none; border-radius: 4px; margin-right: 6px;">Edit</a>
+          <a href="{% url 'deleteTeacher' teacher.id %}"  style="padding: 6px 10px; background-color: #e74c3c; color: white; text-decoration: none; border-radius: 4px;">Delete</a>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
