--- a/Django_Class/authProject/authencation/Template/login.html
+++ b/Django_Class/authProject/authencation/Template/login.html
@@ -178,7 +178,7 @@
 
       <div class="btn-group">
         <button type="submit">Login</button>
-        <a href="" class="signup-btn">Signup</a>
+        <a href="{% url 'registration' %}" class="signup-btn">Signup</a>
       </div>
     </form>
   </div>
