--- a/Django_Class/Book_Manager/bookstore/books/Template/books/book_form.html
+++ b/Django_Class/Book_Manager/bookstore/books/Template/books/book_form.html
@@ -112,7 +112,7 @@
 <div class="body">
   <main>
     <h1>Add New Book</h1>
-    <form method="POST" action="" novalidate>
+    <form method="POST" action="" enctype="multipart/form-data" novalidate>
       {% csrf_token %}
       <div>
         <label for="title">Title *</label>
@@ -143,6 +143,10 @@
       <div class="full-width">
         <label for="description">Description</label>
         <textarea id="description" name="description" placeholder="Enter a brief description (optional)"></textarea>
+      </div>
+      <div class="full-width">
+        <label for="cover">Cover Image</label>
+        <input type="file" name="cover" id="">
       </div>
       <button type="submit" aria-label="Add Book">Add Book</button>
     </form>
