--- a/Django_Class/Book_Manager/bookstore/books/Template/books/book_list.html
+++ b/Django_Class/Book_Manager/bookstore/books/Template/books/book_list.html
@@ -184,7 +184,7 @@
         <img src="{{book.BookCoverPhoto}}" height="50px" alt="">
       </td>
       <td class="actions">
-       <a href="" class="btn btn-view" aria-label="View book details">View</a>
+       <a href="{% url 'viewBook' book.id %}" class="btn btn-view" aria-label="View book details">View</a>
        <a href="{% url 'bookUpdate' book.id %}" class="btn btn-edit" aria-label="Edit book">Edit</a>
        <a href="{% url 'bookDelete' book.id %}" class="btn btn-delete" aria-label="Delete book">Delete</a>
       </td>
