--- a/Django_Class/Custom_User/custom_Users/customUsersApp/templates/signup.html
+++ b/Django_Class/Custom_User/custom_Users/customUsersApp/templates/signup.html
@@ -79,8 +79,8 @@
       <input type="password" placeholder="Confirm Password" required />
       <select required>
         <option value="">Select Role</option>
-        <option value="user">Jobseeker</option>
-        <option value="admin">Recruiter</option>
+        <option value="Jobseeker">Jobseeker</option>
+        <option value="Recruiter">Recruiter</option>
       </select>
       <button type="submit">Sign Up</button>
     </form>
