--- a/Django_Class/Custom_User/custom_Users/customUsersApp/templates/master.html
+++ b/Django_Class/Custom_User/custom_Users/customUsersApp/templates/master.html
@@ -39,20 +39,20 @@
 <!-- Header/Navbar -->
 <nav class="navbar navbar-expand-lg">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="{% url 'home' %}">JobPortal</a>
+    <a class="navbar-brand fw-bold" href="{% url 'homePage' %}">JobPortal</a>
     <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="{% url 'jobs' %}">Jobs</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'post_job' %}">Post Job</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Jobs</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Post Job</a></li>
         {% if user.is_authenticated %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Dashboard</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Logout</a></li>
         {% else %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Signup</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Signup</a></li>
         {% endif %}
       </ul>
     </div>
