--- a/Django_Class/Custom_User/custom_Users/customUsersApp/templates/login.html
+++ b/Django_Class/Custom_User/custom_Users/customUsersApp/templates/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sign Up</title>
+  <title>Login</title>
   <style>
     body {
       background: linear-gradient(to right, #4b6cb7, #182848);
@@ -66,15 +66,25 @@
       text-decoration: none;
       font-weight: bold;
     }
+
+    .error {
+      color: red;
+      text-align: center;
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 <body>
   <div class="signup-box">
-    <h2>Sign Up</h2>
-    <form action="" method="POST">
-      <input type="text" placeholder="User Name" required />
-      <input type="password" placeholder="Password" required />
-      <button type="submit">Sign Up</button>
+    <h2>Login</h2>
+    <form action="{% url 'loginPage' %}" method="POST">
+      {% csrf_token %}
+      {% if error %}
+        <div class="error">{{ error }}</div>
+      {% endif %}
+      <input type="text" name="Username" placeholder="User Name" required />
+      <input type="password" name="Password" placeholder="Password" required />
+      <button type="submit">Login</button>
     </form>
     <div class="link">
       Don't have an account? <a href="{% url 'signupPage' %}">Sign Up</a>
