--- a/Django_Class/Auth_Crud/auth_crud_project/auth_crud_app/templates/home.html
+++ b/Django_Class/Auth_Crud/auth_crud_project/auth_crud_app/templates/home.html
@@ -3,7 +3,7 @@
 <div class="profile-container">
   <div class="profile-header">
     {% if user.profileImage %}
-      <img src="/{{ user.profileImage }}" alt="User Photo">
+      <img src="/{{ user.profileImage }}" alt="User Photo" width="150px">
     {% else %}
       <img src="https://media.istockphoto.com/id/1495088043/vector/user-profile-icon-avatar-or-person-icon-profile-picture-portrait-symbol-default-portrait.jpg?s=612x612&w=0&k=20&c=dhV2p1JwmloBTOaGAtaA3AW1KSnjsdMt7-U_3EZElZ0=" width="150px" alt="Default Photo">
     {% endif %}
