--- a/Django_Class/Task_Manager/taskManagerProject/taskManagerApp/templates/master.html
+++ b/Django_Class/Task_Manager/taskManagerProject/taskManagerApp/templates/master.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Student Task Manager</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- In your master.html head -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
+<!-- At the end of body -->
+<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <style>
     body {
       margin: 0;
