--- a/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/home.html
+++ b/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/home.html
@@ -8,7 +8,7 @@
   }
 
   .profile-card {
-    max-width: 400px;
+    max-width: 300px;
     margin: 3em auto;
     background: white;
     border-radius: 12px;
@@ -61,15 +61,15 @@
 </style>
 
 <div class="profile-card">
-  {% if user.img %}
-    <img src="/{{ user.img }}" alt="Profile Image">
+  {% if request.user.profile_picture %}
+    <img src="/{{ request.user.profile_picture }}" alt="Profile Image">
   {% else %}
     <img src="https://media.istockphoto.com/id/1495088043/vector/user-profile-icon-avatar-or-person-icon-profile-picture-portrait-symbol-default-portrait.jpg?s=612x612&w=0&k=20&c=dhV2p1JwmloBTOaGAtaA3AW1KSnjsdMt7-U_3EZElZ0=" alt="Default Photo">
   {% endif %}
 
-  <h2>{{ user.fullname }}</h2>
-  <p><span class="profile-label">Username:</span> {{ user.username }}</p>
-  <p><span class="profile-label">Email:</span> {{ user.email }}</p>
+  <h2>{{ request.user.first_name }}</h2>
+  <p><span class="profile-label">Username:</span> {{ request.user.username }}</p>
+  <p><span class="profile-label">Email:</span> {{ request.user.email }}</p>
 
 </div>
 {% endblock body %}
