--- a/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/listTask.html
+++ b/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/listTask.html
@@ -21,7 +21,7 @@
 </style>
 
 <div class="container py-4">
-  <h2 class="mb-4 fw-bold text-primary">{{ request.user.first_name }}'s Tasks</h2>
+  <h2 class="mb-4 fw-bold text-primary">{{ request.user.first_name }} {{ request.user.last_name }}'s Tasks</h2>
 
   {% if tasks %}
     {% for task in tasks %}
