--- a/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/addTask.html
+++ b/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/addTask.html
@@ -69,7 +69,7 @@
       <select name="TaskStatus" id="TaskStatus" class="form-select" required>
         <option value="" disabled selected>Select status</option>
         <option value="pending">Pending</option>
-        <option value="inProgress">In Progress</option>
+        <option value="in_progress">In Progress</option>
         <option value="completed">Completed</option>
       </select>
     </div>
