--- a/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/listTask.html
+++ b/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/listTask.html
@@ -114,7 +114,7 @@
                 <label class="form-label">Status</label>
                 <select name="TaskStatus" class="form-select">
                   <option value="pending" {% if task.TaskStatus == 'pending' %}selected{% endif %}>Pending</option>
-                  <option value="inProgress" {% if task.TaskStatus == 'inProgress' %}selected{% endif %}>In Progress</option>
+                  <option value="in_progress" {% if task.TaskStatus == 'in_progress' %}selected{% endif %}>In Progress</option>
                   <option value="completed" {% if task.TaskStatus == 'completed' %}selected{% endif %}>Completed</option>
                 </select>
               </div>
