--- a/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/master.html
+++ b/Django_Class/Task_Manager_29_06/task_managerProject/task_App/templates/master.html
@@ -59,7 +59,7 @@
       <li><a href="{% url 'homePage' %}">Home</a></li>
       <li><a href="{% url 'addTask' %}">Add Task</a></li>
       <li><a href="{% url 'listTask' %}">List Task</a></li>
-      <li><a href="#"></a></li>
+      <li><a href="{% url 'changePasswordPage' %}">Change Password</a></li>
       <li><a href="{% url 'logoutPage' %}">Logout</a></li>
     </ul>
   </nav>
