--- a/Django_Class/To_Do_App_Task_02/to_do_Project/to_do_App/templates/master.html
+++ b/Django_Class/To_Do_App_Task_02/to_do_Project/to_do_App/templates/master.html
@@ -66,7 +66,7 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown">
-            <img src="/{{ request.user.user_image }}" class="user-pic" alt="Profile">
+            <img src="/{{ request.user.user_image }}" class="user-pic" alt="{{request.user.username}}">
             {{ user.username|capfirst }}
           </a>
           <ul class="dropdown-menu dropdown-menu-end shadow">
