Update Task Project

--- a/Django_Class/Demonstration05_02_07_2025/Student_Project_Tracker/student_project_tracker/project/templates/master.html
+++ b/Django_Class/Demonstration05_02_07_2025/Student_Project_Tracker/student_project_tracker/project/templates/master.html
@@ -52,7 +52,9 @@
     <div class="brand">Student Tracker</div>
     <ul class="nav-links">
       <li><a href="{% url 'homePage' %}">Home</a></li>
+      {% if request.user == user.is_superuser %}
       <li><a href="{% url 'addPage' %}">Add Project</a></li>
+      {% endif %}
       <li><a href="{% url 'listPage' %}">Project List</a></li>
       <li><a href="{% url 'logoutPage' %}">Logout</a></li>
     </ul>
