--- a/Django_Class/Demonstration05_02_07_2025/Student_Project_Tracker/student_project_tracker/project/templates/project_list.html
+++ b/Django_Class/Demonstration05_02_07_2025/Student_Project_Tracker/student_project_tracker/project/templates/project_list.html
@@ -72,7 +72,7 @@
           <td>{{request.user}}</td>
           <td>{{ project.updated_at }}</td>
           <td class="action-buttons">
-            <a href="" class="btn btn-sm btn-view">View</a>
+            <a href="{% url 'viewPage' project.id %}" class="btn btn-sm btn-view">View</a>
             <a href="{% url 'updatePage' project.id %}" class="btn btn-sm btn-edit">Edit</a>
             <a href="{% url 'deletePage' project.id %}" class="btn btn-sm btn-delete" onclick="return confirm('Are you sure you want to delete this project?');">Delete</a>
             {% if project.project_status != 'Completed' %}
